--- a/ios/RNLogin/Info.plist
+++ b/ios/RNLogin/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>KAKAO_APP_KEY</key>
+	<string>81cbe81c08faa4ced68d462c137bafe0</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -20,8 +22,36 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb733776616996983</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kakao81cbe81c08faa4ced68d462c137bafe0</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>733776616996983</string>
+	<key>FacebookDisplayName</key>
+	<string>RNLogin</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -53,9 +83,21 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-<!--여기 밑에-->
-<key>CFBundleURLTypes</key> <array> <dict> <key>CFBundleURLSchemes</key> <array> <string>fb733776616996983</string> </array> </dict> </array> <key>FacebookAppID</key> <string>733776616996983</string> <key>FacebookDisplayName</key> <string>RNLogin</string>
-<key>LSApplicationQueriesSchemes</key> <array> <string>fbapi</string> <string>fb-messenger-share-api</string> <string>fbauth2</string> <string>fbshareextension</string> </array>
-<!--여기 위헤-->
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <!-- 공통 -->
+    <string>kakao81cbe81c08faa4ced68d462c137bafe0</string>
+    
+    <!-- 간편로그인 -->
+    <string>kakaokompassauth</string>
+    <string>storykompassauth</string>
+    
+    <!-- 카카오톡링크 -->
+    <string>kakaolink</string>
+    <string>kakaotalk-5.9.7</string>
+    
+    <!-- 카카오스토리링크 -->
+    <string>storylink</string>
+  </array>
 </dict>
 </plist>
