--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-fbsdk": "^0.8.0"
+    "react-native-fbsdk": "^0.8.0",
+    "react-native-kakao-logins": "^1.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
