--- a/ios/RNLogin/Info.plist
+++ b/ios/RNLogin/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>KAKAO_APP_KEY</key>
-	<string>81cbe81c08faa4ced68d462c137bafe0</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -38,6 +36,16 @@
 				<string>kakao81cbe81c08faa4ced68d462c137bafe0</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>RNLoginNaver</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>RNLoginNaverURL</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
@@ -45,12 +53,18 @@
 	<string>733776616996983</string>
 	<key>FacebookDisplayName</key>
 	<string>RNLogin</string>
+	<key>KAKAO_APP_KEY</key>
+	<string>81cbe81c08faa4ced68d462c137bafe0</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
-		<string>fbapi</string>
-		<string>fb-messenger-share-api</string>
-		<string>fbauth2</string>
-		<string>fbshareextension</string>
+		<string>naversearchapp</string>
+		<string>naversearchthirdlogin</string>
+		<string>kakao81cbe81c08faa4ced68d462c137bafe0</string>
+		<string>kakaokompassauth</string>
+		<string>storykompassauth</string>
+		<string>kakaolink</string>
+		<string>kakaotalk-5.9.7</string>
+		<string>storylink</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
@@ -83,21 +97,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-  <key>LSApplicationQueriesSchemes</key>
-  <array>
-    <!-- 공통 -->
-    <string>kakao81cbe81c08faa4ced68d462c137bafe0</string>
-    
-    <!-- 간편로그인 -->
-    <string>kakaokompassauth</string>
-    <string>storykompassauth</string>
-    
-    <!-- 카카오톡링크 -->
-    <string>kakaolink</string>
-    <string>kakaotalk-5.9.7</string>
-    
-    <!-- 카카오스토리링크 -->
-    <string>storylink</string>
-  </array>
 </dict>
 </plist>
