--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-fbsdk": "^0.8.0",
-    "react-native-kakao-logins": "^1.3.0"
+    "react-native-kakao-logins": "^1.3.0",
+    "react-native-naver-login": "^1.2.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
