--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-native": "0.57.8",
     "react-native-fbsdk": "^0.8.0",
     "react-native-kakao-logins": "^1.3.0",
-    "react-native-naver-login": "^1.2.0"
+    "react-native-naver-login": "^1.2.0",
+    "react-native-push-notification": "^3.1.2"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
